# bubblefish

./: .gitignore  Cargo.toml  NOTICE  README.md  build.py  latest.json
.github/workflows/: build-desktop.yml  build-plugins.yml  deploy-cloudflare.yml  sync-gitee.yml  update-manifests.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/api/: bunny.rs  cleanup.rs  image.rs  io.rs  marker.rs  mod.rs  opening_project.rs  project.rs  stats.rs  thumbnail.rs  undo_redo.rs
core/src/bindings/: mod.rs
core/src/bindings/tauri/: auto_register.rs  bindings.rs  mod.rs
core/src/bindings/wasm/: bindings.rs  event_channel.rs  mod.rs  shared_buffer.rs
core/src/common/: error.rs  events.rs  logger.rs  mod.rs  types.rs
core/src/common/dto/: image.rs  marker.rs  mod.rs  opening_project.rs  project.rs  project_format.rs
core/src/plugin/: event_bus.rs  events.rs  mod.rs  permissions.rs  service_registry.rs
core/src/service/: coordinator.rs  events.rs  mod.rs
core/src/service/bunny/: cancellation.rs  executor.rs  mod.rs  plugin_manager.rs  queue.rs  task.rs  task_manager.rs  types.rs
core/src/service/image/: mod.rs  service.rs  thumbnail.rs
core/src/service/io/: bf.rs  event_handler.rs  labelplus.rs  mod.rs  project_data.rs  service.rs
core/src/service/marker/: mod.rs  service.rs
core/src/service/opening_project/: core.rs  handlers.rs  mod.rs  service.rs
core/src/service/project/: mod.rs  service.rs
core/src/service/stats/: mod.rs  service.rs
core/src/service/undo_redo/: actions.rs  mod.rs  performer.rs  service.rs
core/src/storage/: bunny_cache.rs  dimension_extractor.rs  image.rs  image_data.rs  marker.rs  mod.rs  opening_project.rs  project.rs  state.rs  traits.rs  undo_redo.rs
deploy/cloudflare/: .gitignore  README.md  _headers  deploy.sh  wrangler.toml
deploy/updater/: README.md  generate-keys.sh
desktop/: Cargo.toml  tauri.bundled.conf.json  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: lib.rs  plugin_loader.rs  plugin_storage.rs
frontend/: .prettierignore  eslint.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: index.ts  types.ts
frontend/src/lib/components/: BunnyPanel.svelte  ButtonBar.svelte  ContextMenu.svelte  DictionaryPanel.svelte  Draggable.svelte  FileUpload.svelte  GlobalKeyboardShortcuts.svelte  ImageManagement.svelte  ImageViewer.svelte  ImagesPanel.svelte  LoadingSpinner.svelte  ProgressBar.svelte  ProjectSettingsPanel.svelte  QuillEditor.svelte  Resizable.svelte  ResizableBar.svelte  StatusBar.svelte  TitleBar.svelte  ToolbarControls.svelte  TranslationPanel.svelte  WelcomePage.svelte  index.ts
frontend/src/lib/components/bunny/: BunnyToolbar.svelte  MarkerSelector.svelte  OCRPanel.svelte  TaskQueue.svelte  TranslationPanel.svelte
frontend/src/lib/components/debug/: DebugWindow.svelte  LogsTab.svelte  PluginsTab.svelte  StoreTab.svelte
frontend/src/lib/components/markers/: Markers.svelte  PointMarker.svelte  RectangleMarker.svelte
frontend/src/lib/components/modals/: AboutModal.svelte  ConfirmModal.svelte  LicenseModal.svelte  Modal.svelte  Modals.svelte  NewProjectModal.svelte  OpenProjectModal.svelte  SettingsModal.svelte  SnapshotModal.svelte  index.ts
frontend/src/lib/components/notifications/: NotificationCenter.svelte  NotificationToasts.svelte
frontend/src/lib/components/settings/: PluginSettings.svelte
frontend/src/lib/components/titlebar/: TitleBarMac.svelte  TitleBarWeb.svelte  TitleBarWindows.svelte  titlebar-global.css
frontend/src/lib/core/: adapter.ts  events.ts  tauri.ts
frontend/src/lib/services/: bunnyService.ts  coordinatorService.ts  errorService.ts  eventService.ts  fileAssociationService.ts  imageLoaderService.ts  imageService.ts  imageViewerService.ts  keyboardShortcutService.ts  layoutService.ts  loadingService.ts  logViewerService.ts  markerService.ts  menuEventService.ts  menuService.ts  modalService.ts  notificationService.ts  platformService.ts  pluginBridge.ts  pluginConfigService.ts  pluginService.ts  pluginStorageService.ts  projectService.ts  recentMenuService.ts  recentProjectsService.ts  sharedBufferHandler.ts  snapshotService.ts  textService.ts  themeService.ts  thumbnailService.ts  titleService.ts  undoRedoService.ts  updaterService.ts  windowService.ts
frontend/src/lib/stores/: bunnyStore.ts  errorStore.ts  imageLoaderStore.ts  imageStore.ts  imageViewerStore.ts  keyboardShortcutStore.ts  layoutStore.ts  loadingStore.ts  logViewerStore.ts  markerStore.ts  modalStore.ts  notificationStore.ts  projectStore.ts  themeStore.ts  titleStore.ts  undoRedoStore.ts
frontend/src/lib/types/: bunny.ts
frontend/src/lib/utils/: imageUtils.ts  progressManager.ts  sharedArrayBufferImageLoader.ts  sharedArrayBufferStream.ts  snapshotStorage.ts  validation.ts  wasmLoader.ts
frontend/src/lib/workers/: bunnyWorker.ts  cacheWorker.ts  imageWorker.ts  pluginWorker.ts  snapshotWorker.ts  wasmWorker.ts
frontend/src/routes/: +layout.svelte  +page.svelte
plugins/: plugins.conf.json
plugins/doubao-translation-plugin/: Cargo.toml
plugins/doubao-translation-plugin/src/: lib.rs
plugins/dummy-ocr-plugin/: Cargo.toml
plugins/dummy-ocr-plugin/src/: lib.rs
plugins/dummy-translation-plugin/: Cargo.toml
plugins/dummy-translation-plugin/src/: lib.rs
plugins/kha-white-ocr-plugin/: .gitignore  Cargo.toml
plugins/kha-white-ocr-plugin/snippet/: README.md  base.py  convert_to_onnx.py  inference_onnx.py  main.rs
plugins/kha-white-ocr-plugin/src/: lib.rs
plugins/marker-logger/: Cargo.toml
plugins/marker-logger-plugin/: Cargo.toml
plugins/marker-logger-plugin/src/: lib.rs
plugins/marker-logger/src/: lib.rs
plugins/md5-calculator/: Cargo.toml
plugins/md5-calculator-plugin/: Cargo.toml
plugins/md5-calculator-plugin/src/: lib.rs
plugins/md5-calculator/src/: lib.rs
plugins/plugin-sdk/: Cargo.toml
plugins/plugin-sdk/src/: bunny.rs  config.rs  events.rs  lib.rs  native.rs  services.rs  shared_buffer.rs
