[package]
name = "bubblefish-desktop"
version = "0.1.0"
description = "Desktop Application of Bubblefish Using Tauri"
authors = ["yyuchenn"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
paste = "1.0"
tauri = { version = "2.6.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
bubblefish-core = { path = "../core", features = ["tauri"] }
libloading = "0.8"
libc = "0.2"
