[package]
name = "doubao-translation-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Bubblefish Team"]
description = "Doubao AI translation plugin for Bubblefish using Volcano Engine API"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bubblefish-plugin-sdk = { path = "../plugin-sdk", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17"

[features]
default = []
wasm = ["bubblefish-plugin-sdk/wasm", "wasm-bindgen", "web-sys", "js-sys", "getrandom", "serde-wasm-bindgen", "wasm-bindgen-futures"]
native = ["bubblefish-plugin-sdk/native", "reqwest"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["console", "Request", "RequestInit", "RequestMode", "Response", "Headers", "Window"], optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }