[package]
name = "marker-logger-plugin"
version = "1.0.0"
edition = "2024"
description = "一个插件示例。它将选中的标记的内容输出到控制台。"
authors = ["yyuchenn"]

[dependencies]
bubblefish-plugin-sdk = { path = "../plugin-sdk", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }

# Native-specific dependencies
once_cell = { version = "1.19", optional = true }

[features]
default = []
wasm = ["bubblefish-plugin-sdk/wasm", "wasm-bindgen", "js-sys", "serde-wasm-bindgen", "web-sys"]
native = ["bubblefish-plugin-sdk/native", "once_cell"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack]
wasm-opt = false