[package]
name = "marker-logger-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
bubblefish-plugin-sdk = { path = "../plugin-sdk" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true