[package]
name = "md5-calculator-plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bubblefish-plugin-sdk = { path = "../plugin-sdk", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"

# WASM-specific dependencies
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

# Native-specific dependencies
once_cell = { version = "1.19", optional = true }

[features]
default = []
wasm = ["bubblefish-plugin-sdk/wasm", "serde-wasm-bindgen", "wasm-bindgen", "js-sys", "web-sys"]
native = ["bubblefish-plugin-sdk/native", "once_cell"]

[profile.release]
opt-level = "z"
lto = true

[package.metadata.wasm-pack]
wasm-opt = false