[package]
name = "bubblefish-plugin-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
js-sys = { version = "0.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]